@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: June 07, 2009</p>
+      <p>Last Updated: June 08, 2009</p>
     </td>
   </tr>
 </table>
@@ -1432,6 +1432,10 @@ nuttx-0.4.8 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* arch/arm/str71x/str71x_serial.c:  The STR711 interrupt driven serial driver
 	  finally works after some extradinary measures to handle missed interrupts.
 	  NSH is fully functional on the Olimex STR-P711 board.
+	* example/nsh: Moved architecture specific files from NSH directory to board-
+	  specific directories.
+	* config/olimex-strp711/src/up_nsh.c:  Add an NSH board specific directory for
+	  for the Olimex STR7P11 board.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
